Revert "remove api key"
This reverts commit 89d6fc7ae5bbb47a77d4b73187aa09a4b6d8bdb2.

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,6 @@
     </div>
 
     <script src="{{ url_for('static', filename='/js/app.js') }}"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=&libraries=places&callback=initMap" async defer loading="async"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZKkMUM9NKJcotSy6WmuPNS1UN3QTkipM&libraries=places&callback=initMap" async defer loading="async"></script>
 </body>
 </html>
